@@ -27,9 +27,11 @@ module UI
         def initialize(parent)
             super("", parent, Gtk::Dialog::MODAL, 
                   [Gtk::Stock::HELP, Gtk::Dialog::RESPONSE_HELP])
-            
+           
+            self.window_position = Gtk::Window::POS_CENTER 
             self.has_separator = false
-            self.resizable = false
+            self.resizable = true 
+            self.border_width = 4
             self.vbox.border_width = 12
 
             main_box = Gtk::VBox.new
@@ -38,28 +40,53 @@ module UI
 
             self.vbox << main_box
 
-            @rules_header_label = Gtk::Label.new
-            @rules_header_label.set_alignment(0.0, 0.0)
-            
+            @rules_header_box = Gtk::HBox.new
+            @rules_header_box.spacing = 2
+ 
             @rules_box = Gtk::VBox.new
             @rules_box.spacing = 8 
 
-            main_box << @rules_header_label
-            main_box << @rules_box
+            scrollview = Gtk::ScrolledWindow.new
+            scrollview.hscrollbar_policy = Gtk::POLICY_NEVER
+            scrollview.vscrollbar_policy = Gtk::POLICY_AUTOMATIC
+            scrollview.set_size_request(-1, 100)
+            scrollview.add_with_viewport(@rules_box)
 
-            self.show_all
+            main_box.pack_start(@rules_header_box, false, false, 0)
+            main_box << scrollview
         end
 
         #########
         protected
         #########
 
-        def update_rules_header_label
-            @rules_header_label.text = if @rules_box.children.length > 1
-                _("Match [all|any] of the following rules:")
+        def update_rules_header_box
+            @rules_header_box.children.each { |x| @rules_header_box.remove(x) }
+
+            if @rules_box.children.length > 1 
+                label1 = Gtk::Label.new
+                label1.set_alignment(0.0, 0.5)
+                label1.text = _("Match")
+               
+                cb = Gtk::ComboBox.new
+                [_("all"), _("any")].each { |x| cb.append_text(x) }
+                cb.active = 0 
+
+                label2 = Gtk::Label.new
+                label2.set_alignment(0.0, 0.5)
+                label2.text = _("of the following rules:")
+                
+                @rules_header_box.pack_start(label1, false, false, 0)
+                @rules_header_box.pack_start(cb, false, false, 0)
+                @rules_header_box.pack_start(label2, false, false, 0)
             else
-                _("Match the following rule:")
+                label = Gtk::Label.new
+                label.set_alignment(0.0, 0.5)
+                label.text = _("Match the following rule:")
+                @rules_header_box << label                 
             end
+
+            @rules_header_box.show_all
         end
 
         def insert_new_rule
@@ -69,10 +96,38 @@ module UI
             left_operand_combo = Gtk::ComboBox.new
             operator_combo = Gtk::ComboBox.new
             value_entry = Gtk::Entry.new
+            
+            add_button = Gtk::Button.new("")
+            add_button.remove(add_button.children.first)
+            add_button << Gtk::Image.new(Gtk::Stock::ADD, Gtk::IconSize::BUTTON)
+        
+            add_button.signal_connect('clicked') { insert_new_rule }
+
+            remove_button = Gtk::Button.new("")
+            remove_button.remove(remove_button.children.first)
+            remove_button << Gtk::Image.new(Gtk::Stock::REMOVE, 
+                                            Gtk::IconSize::BUTTON)
+
+            remove_button.signal_connect('clicked') do |button|
+                @rules_box.children.each do |box|
+                    if box.children.include?(button)
+                        @rules_box.remove(box)
+                        sensitize_remove_rule_buttons
+                        update_rules_header_box
+                        break
+                    end
+                end
+            end
 
             operands = SmartLibrary::Rule::LEFT_OPERANDS
             operands.each do |operand|
                 left_operand_combo.append_text(operand.name)
+            end
+            operator_combo.signal_connect('changed') do
+                operand = operands[left_operand_combo.active]
+                operators = SmartLibrary::Rule.operators_for_operand(operand)
+                operator = operators[operator_combo.active]
+                value_entry.visible = operator.proc_args_count != 0 
             end
             left_operand_combo.signal_connect('changed') do
                 operand = operands[left_operand_combo.active]
@@ -83,16 +138,31 @@ module UI
                 end
                 operator_combo.active = 0
             end
+
+            rule_box.pack_start(left_operand_combo, false, false, 0)
+            rule_box.pack_start(operator_combo, false, false, 0)
+            rule_box.pack_start(value_entry)
+            rule_box.pack_start(add_button, false, false, 0)
+            rule_box.pack_start(remove_button, false, false, 0)
+
             left_operand_combo.active = 0
-
-            rule_box << left_operand_combo
-            rule_box << operator_combo
-            rule_box << value_entry
-
+            
             rule_box.show_all
 
-            @rules_box << rule_box
-            update_rules_header_label
+            @rules_box.pack_start(rule_box, false, true, 0)
+            update_rules_header_box
+            sensitize_remove_rule_buttons
+        end
+
+        def sensitize_remove_rule_buttons
+            boxes = @rules_box.children
+            state = boxes.length > 1
+            boxes.each do |box|
+                button = box.children[-1]
+                if button.is_a?(Gtk::Button)
+                    button.sensitive = state
+                end
+            end
         end
     end
 end
